welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:8: error: not found: value estSurOrange
} while (!estSurOrange())
          ^