welcome.lessons.welcome.loopdowhile.Poucet.scala.code
do {
    avance()
} while (!estFaceMur)
do {
    droite()
    avance
} while (!estSurOrange())
avance()